# gitops

./: pyproject.toml  pytest.ini  requirements.txt  shell.nix
.github/workflows/: lint.yml
app/: models.py  mqtt.py  utils.py
app/routes/: create_deployment.py  deploy.py  list_pres.py
