[project]
version = "0.1.0"
name = "bitswan-gitops-server"
description = "Bitswan gitops makes it easy to deploy bitswan pipelines and automations on any server"
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
authors = [
  {name = "LibertyAces Ltd", email = "support@libertyaces.com"}
]

dependencies = [
 "fastapi",
 "uvicorn",
 "python-multipart",
 "aiofiles",
 "pyyaml",
 "filelock",
 "dockerfile-parse",
 "docker",
 "apscheduler",
 "paho-mqtt",
 "humanize",
]

[project.optional-dependencies]
dev = [
  "black==24.10.0",
  "ruff==0.6.7",
  "pytest",
]

[project.scripts]
bitswan-gitops-server = "app.uvicorn:main"


[tool.ruff]
lint.ignore = ["E501", "E402", "E721", "E712"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.hatch.metadata]
allow-direct-references=true
